Add: little fix

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             <h1 class="text-center text-white">IL TUO BIGLIETTO</h1>
 
-            <div class="sezioneOutput">
+            <div id="tuoBiglietto" class="sezioneOutput hidden">
                 <h3>Dettagli Passeggero</h3>
                 <table>
                     <tr>
