Add: small fix 2

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                       </tr>
                       <tr>
                         <td id="name" class="nomepass"></td>
-                        <td id="offerta">Offerta scontata</td>
+                        <td id="offer"></td>
                         <td id="carrozza"></td>
                         <td id="codice"></td>
                         <td id="prezzoFinale"></td>
